04_Deploying/11-02_Deploy/app-deploy.yaml
# Exercise 10-02 v1.2.0
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  namespace: app
  labels:
    app: app-app 
    tier: backend 
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: app-pod
  template:
    metadata:
      labels:
        pod: app-pod
    spec:
      containers:
        - name: web-app
          image: nginx:1.24
          ports:
            - name: http 
              containerPort: 80
              protocol: TCP
          resources: {}
